// Copyright 2019 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package apibq;

import "google/protobuf/timestamp.proto";
import "go.chromium.org/chromiumos/infra/proto/src/device/config.proto";

message DeviceConfigInventory {
    string id = 1;
    device.Config config = 2;
    google.protobuf.Timestamp updated_time = 3;
}
