// Copyright 2019 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package apibq;

import "google/protobuf/timestamp.proto";
import "go.chromium.org/chromiumos/infra/proto/src/manufacturing/config.proto";

message ManufacturingInventory {
    string manufacturing_id = 1;
    manufacturing.Config config = 2;
    google.protobuf.Timestamp updated_time = 3;
}